<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ui_category">
        <SwitchPreference
            android:key="counterVibrate"
            android:id="@+id/counterVibrate"
            android:defaultValue="true"
            android:enabled="false"
            android:icon="@drawable/ic_counter_vibrator"
            android:summaryOff="@string/ui_vibrator_summaryOff"
            android:summaryOn="@string/ui_vibrator_summaryOn"
            android:title="@string/ui_vibrator" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc_category">
        <PreferenceScreen
            android:icon="@drawable/ic_start_intro"
            android:summary="@string/action_showIntro_summary"
            android:title="@string/action_showIntro">
            <intent android:action="chinmay.simplecounter.INTROACTIVITY" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_category">
        <Preference
            android:icon="@drawable/ic_about_developer"
            android:key="devsum"
            android:summary="@string/about_developer"
            android:title="@string/about_developer_title" />
        <Preference
            android:selectable="false"
            android:icon="@drawable/ic_about_simplecounter"
            android:summary="@string/about_pref_summary"
            android:title="@string/about_pref" />
        <Preference
            android:selectable="false"
            android:icon="@drawable/ic_version"
            android:summary="@string/app_version"
            android:title="@string/app_version_title" />
        <Preference
            android:selectable="false"
            android:layout="@layout/pref_custom"/>
    </PreferenceCategory>
</PreferenceScreen>